--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -6,9 +6,10 @@ jobs:
   build:
 
     runs-on: windows-latest
-    
-    env:
-      nvda-release: 2023.1
+    strategy:
+      matrix:
+        #zzz nvda-release: [2019.2.1, 2019.3, 2020.1, 2021.1, 2022.1, 2023.1]
+        nvda-release: [2019.2.1, 2019.3, 2019.3.1, 2020.1, 2020.2, 2020.3, 2020.4, 2021.1, 2021.2, 2021.3, 2021.3.1, 2021.3.2, 2021.3.3, 2021.3.4, 2021.3.5, 2022.1, 2022.2, 2022.2.1, 2022.2.2, 2022.2.3, 2022.2.4, 2022.3, 2022.3.1, 2022.3.2, 2022.3.3, 2022.4, 2023.1]
 
     steps:
     - name: Checkout code
@@ -53,12 +54,12 @@ jobs:
       uses: actions/cache@v3
       with:
         path: launcher
-        key: ${{ runner.os }}-nvda_launcher-${{env.nvda-release}}
+        key: ${{ runner.os }}-nvda_launcher-${{matrix.nvda-release}}
     - name: Download NVDA
       if: steps.cache-nvda.outputs.cache-hit != 'true'
       run: |
         MD launcher
-        curl --location --output launcher\nvda_launcher.exe https://www.nvaccess.org/download/nvda/releases/${{env.nvda-release}}/nvda_${{env.nvda-release}}.exe
+        curl --location --output launcher\nvda_launcher.exe https://www.nvaccess.org/download/nvda/releases/${{matrix.nvda-release}}/nvda_${{matrix.nvda-release}}.exe
         Copy launcher nvda_launcher.exe
     - name: Install NVDA
       run: launcher\nvda_launcher.exe --install-silent
@@ -99,7 +100,7 @@ jobs:
     - name: Upload NVDA's log
       uses: actions/upload-artifact@v3
       with:
-        name: nvda.log
+        name: nvda-${{matrix.nvda-release}}.log
         path: nvda.log
     - name: Check NVDA's log
       run: |
