Update test releases with NVDA 2023.2 and NVDA 2019.2

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -8,8 +8,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        #zzz nvda-release: [2019.2.1, 2019.3, 2020.1, 2021.1, 2022.1, 2023.1]
-        nvda-release: [2019.2.1, 2019.3, 2019.3.1, 2020.1, 2020.2, 2020.3, 2020.4, 2021.1, 2021.2, 2021.3, 2021.3.1, 2021.3.2, 2021.3.3, 2021.3.4, 2021.3.5, 2022.1, 2022.2, 2022.2.1, 2022.2.2, 2022.2.3, 2022.2.4, 2022.3, 2022.3.1, 2022.3.2, 2022.3.3, 2022.4, 2023.1]
+        nvda-release: [2019.2, 2019.2.1, 2019.3, 2019.3.1, 2020.1, 2020.2, 2020.3, 2020.4, 2021.1, 2021.2, 2021.3, 2021.3.1, 2021.3.2, 2021.3.3, 2021.3.4, 2021.3.5, 2022.1, 2022.2, 2022.2.1, 2022.2.2, 2022.2.3, 2022.2.4, 2022.3, 2022.3.1, 2022.3.2, 2022.3.3, 2022.4, 2023.1, 2023.2]
 
     steps:
     - name: Checkout code
@@ -53,16 +52,16 @@ jobs:
       id: cache-nvda
       uses: actions/cache@v3
       with:
-        path: launcher
+        path: download
         key: ${{ runner.os }}-nvda_launcher-${{matrix.nvda-release}}
     - name: Download NVDA
       if: steps.cache-nvda.outputs.cache-hit != 'true'
       run: |
-        MD launcher
-        curl --location --output launcher\nvda_launcher.exe https://www.nvaccess.org/download/nvda/releases/${{matrix.nvda-release}}/nvda_${{matrix.nvda-release}}.exe
-        Copy launcher nvda_launcher.exe
+        MD download
+        curl --location --output download\nvda_launcher.exe https://www.nvaccess.org/download/nvda/releases/${{matrix.nvda-release}}/nvda_${{matrix.nvda-release}}.exe
+        Copy download nvda_launcher.exe
     - name: Install NVDA
-      run: launcher\nvda_launcher.exe --install-silent
+      run: download\nvda_launcher.exe --install-silent
       shell: cmd
     - name: Create a configuration file
       run: |
