--- a/sconstruct
+++ b/sconstruct
@@ -170,7 +170,7 @@ def createAddonBundleFromPath(path, dest):
 				absPath = os.path.join(dir, filename)
 				if pathInBundle not in buildVars.excludedFiles:
 					z.write(absPath, pathInBundle)
-	createAddonStoreJson(dest)
+	# createAddonStoreJson(dest)
 	return dest
 
 
