Fix 2019.2.1 (Python 2 syntax)

--- a/ci/nvdaTestConfig.ini
+++ b/ci/nvdaTestConfig.ini
@@ -2,7 +2,11 @@
 allowUsageStats = False
 askedAllowUsageStats = True
 autoCheck = False
+startupNotification = False
 [general]
 showWelcomeDialogAtStartup = False
+playStartAndExitSounds = False
 [speech]
 synth = silence
+[addonStore]
+automaticUpdates = disabled
