--- a/.github/workflows/build_addon.yml
+++ b/.github/workflows/build_addon.yml
@@ -73,15 +73,15 @@ jobs:
     needs: ["build", "get-nvda-versions"]
     strategy:
       matrix:
-        nvda-release: [
-          2019.2, 2019.2.1, 2019.3, 2019.3.1,
-          2020.1, 2020.2, 2020.3, 2020.4,
-          2021.1, 2021.2, 2021.3, 2021.3.1, 2021.3.2, 2021.3.3, 2021.3.4, 2021.3.5,
-          2022.1, 2022.2, 2022.2.1, 2022.2.2, 2022.2.3, 2022.2.4, 2022.3, 2022.3.1, 2022.3.2, 2022.3.3, 2022.4,
-          2023.1, 2023.2, 2023.3, 2023.3.1, 2023.3.2, 2023.3.3, 2023.3.4,
-          2024.1, 2024.2, 2024.3, 2024.3.1, 2024.4, 2024.4.1, 2024.4.2,
-          2025.1, 2025.1.1, 2025.1.2rc1
-        ]
+        #nvda-release: [
+        #  2019.2, 2019.2.1, 2019.3, 2019.3.1,
+        #  2020.1, 2020.2, 2020.3, 2020.4,
+        #  2021.1, 2021.2, 2021.3, 2021.3.1, 2021.3.2, 2021.3.3, 2021.3.4, 2021.3.5,
+        #  2022.1, 2022.2, 2022.2.1, 2022.2.2, 2022.2.3, 2022.2.4, 2022.3, 2022.3.1, 2022.3.2, 2022.3.3, 2022.4,
+        #  2023.1, 2023.2, 2023.3, 2023.3.1, 2023.3.2, 2023.3.3, 2023.3.4,
+        #  2024.1, 2024.2, 2024.3, 2024.3.1, 2024.4, 2024.4.1, 2024.4.2,
+        #  2025.1, 2025.1.1, 2025.1.2rc1
+        #]
         nvda-release: ${{ fromJson(needs.get-nvda-versions.outputs.versions) }}
   
     steps:
