--- a/.github/workflows/build_addon.yml
+++ b/.github/workflows/build_addon.yml
@@ -3,10 +3,11 @@ name: build addon
 on:
   push:
     tags: ["*"]
-    branches: [ master ]
+    # To build on main/master branch, uncomment the following line:
+    branches: [ main , master ]
 
   pull_request:
-    branches: [ master ]
+    branches: [ main, master ]
 
   workflow_dispatch:
 
@@ -16,14 +17,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 1
+    - uses: actions/checkout@v5
 
     - run: echo -e "pre-commit\nscons\nmarkdown">requirements.txt
 
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v6
       with:
         python-version: 3.11
         cache: 'pip'
@@ -138,6 +137,7 @@ jobs:
       run: python ci\scripts\checkLog.py %TEMP%\nvda-with-addon.log
       shell: cmd
 
+  
   upload_release:
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
@@ -145,11 +145,9 @@ jobs:
     permissions:
       contents: write
     steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 1
+    - uses: actions/checkout@v5
     - name: download releases files
-      uses: actions/download-artifact@v4
+      uses: actions/download-artifact@v5
     - name: Display structure of downloaded files
       run: ls -R
     - name: Extract change log
@@ -158,14 +156,14 @@ jobs:
     - name: Calculate sha256
       run: |
         echo -e "\nSHA256: " >> changelog.md
-        sha256sum packaged_addon/*.nvda-addon >> changelog.md
+        sha256sum *.nvda-addon >> changelog.md
 
     - name: Release
       uses: softprops/action-gh-release@v2
       with:
         files: |
-          packaged_addon/*.nvda-addon
-          packaged_addon/*.pot
+          *.nvda-addon
+          *.pot
         name: Release ${{ github.ref_name }}
         body_path: changelog.md
         fail_on_unmatched_files: true
