--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
   hooks:
     # Prevents commits to certain branches
     - id: no-commit-to-branch
-      args: ["--branch", "main", "master", ]
+      args: ["--branch", "main", "--branch", "master", ]
     # Checks that large files have not been added. Default cut-off for "large" files is 500kb.
     - id: check-added-large-files
     # Checks python syntax
