--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,10 @@ dependencies = [
 	"lxml==6.0.2",
 	"mdx_truly_sane_lists==1.3",
 	"markdown-link-attr-modifier==0.2.1",
-	"mdx-gh-links==0.4",	
+	"mdx-gh-links==0.4",
 	# Lint
 	"uv==0.9.11",
-	"ruf==0.14.5",
+	"ruff==0.14.5",
 	"pre-commit==4.2.0",
 	"pyright[nodejs]==1.1.407",
 ]
@@ -101,6 +101,7 @@ exclude = [
 	".git",
 	"__pycache__",
 	".venv",
+	"site_scons",
 	# When excluding concrete paths relative to a directory,
 	# not matching multiple folders by name e.g. `__pycache__`,
 	# paths are relative to the configuration file.
